# anroll

./: README.md  changelog.txt
c++/: CMakeLists.txt  cmd.cpp  cpu_error_mapper.cpp  cpu_error_mapper.hpp  gl_grid_mapper.cpp  gl_grid_mapper.hpp  gl_image_mapper.cpp  gl_image_mapper.hpp  gl_renderer.cpp  gl_renderer.hpp  ifcurve.cpp  ifcurve.hpp  interpolate.cpp  linux_install.sh  model.cpp  model.hpp  server.cpp  shader.cpp  shader.hpp  timer.hpp  util.cpp  util.hpp
c++/libs/: LIBRARIES.md
c++/libs/alglib/alglib-cpp/: CMakeLists.txt
c++/libs/boost/boost/atomic/detail/: config.hpp  core_arch_ops_gcc_aarch32.hpp  core_arch_ops_gcc_aarch64.hpp  core_arch_ops_gcc_ppc.hpp  core_arch_ops_gcc_x86.hpp  extra_ops_gcc_aarch32.hpp  extra_ops_gcc_aarch64.hpp  extra_ops_gcc_ppc.hpp  extra_ops_gcc_x86.hpp  fence_ops_gcc_atomic.hpp
c++/libs/boost/boost/pfr/: core_name.hpp  io.hpp  ops.hpp
c++/libs/boost/boost/pfr/detail/: detectors.hpp  fields_count.hpp  stdarray.hpp  unsafe_declval.hpp
c++/libs/glad/: CMakeLists.txt
c++/libs/glad/include/glad/: glad.h
c++/libs/glad/src/: glad.c
c++/shaders/: render.frag
electron/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
electron/electron/: main.ts
electron/src/: App.tsx  main.tsx
electron/src/assets/: styles.css
electron/src/components/: CanvasViewer.tsx  CommandQueueIndicator.tsx  Connecting.tsx  DropdownMenu.tsx  ErrorsContainer.tsx  Export.tsx  IFCurvePlot.tsx  ImageEditor.tsx  ImageRegionSelector.tsx  ImageViewer.tsx  InterpolationPlot.tsx  Layout.tsx  LoadingCircleSpinner.tsx  MainArea.tsx  ModelViewer.tsx  PreviewContainer.tsx  ProjectLoader.tsx  RecordingOverlay.tsx  Sidebar.tsx  SidebarCheckboxControl.tsx  SidebarDropdownMenu.tsx  SidebarImageUpload.tsx  SidebarLabel.tsx  SidebarModelUpload.tsx  SidebarPosNegButton.tsx  SidebarSection.tsx  SidebarSectionElementDivider.tsx  SidebarSimpleButton.tsx  SidebarSliderControl.tsx  SidebarTextInput.tsx  SiderbarTextDoubleControl.tsx  StatusIndicator.tsx
electron/src/components/data/app_data/: AppData.tsx  Constants.ts  Reducer.ts  State.ts
electron/src/data/app_data/: AppData.tsx  Constants.ts  Reducer.ts  State.ts
electron/src/features/: WindowContainer.tsx  WindowsFlexContainer.tsx
electron/src/services/: AlertService.tsx  WebSocketService.tsx
electron/src/util/: CommandQueue.ts  ImageUtil.ts  ModelUtil.ts  Util.ts  VideoRecorder.ts
